# arbocensus

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Makefile  README.md  TODO.md  VIEWER_QUICKSTART.md  commitlint.config.js  docker-compose.prod.yml  docker-compose.shared.yml  docker-compose.yml  package-lock.json  package.json  pseudo-codigo.md  pyproject.toml  requirements-linters.txt  requirements.txt  run.py  saved_bbox.json
.claude/commands/: thesis-section.md
.github/: copilot-instructions.md  pull_request_template.md
.github/instructions/: commits-and-prs.instructions.md  django-backend.instructions.md  ortools-vrp.instructions.md  react-frontend.instructions.md  thesis.instructions.md
.github/workflows/: ci-backend.yml  ci-commitlint.yml  ci-frontend.yml  ci.yml
.husky/: pre-commit
.local/experiments/: pilot-full.csv  profiling-grid-full-20260711.csv  profiling-grid-small-20260711.csv  profiling-tl60-full.csv
backend/: .env.example  .requirements.md  Dockerfile  Makefile  conftest.py  dev-requirements.in  dev-requirements.txt  entrypoint.sh  requirements.in  requirements.txt
backend/apps/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/api/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/datasets/: admin.py  importers.py  instances.py  legacy.py  models.py  serializers.py  urls.py  views.py
backend/apps/optimization/: admin.py  apps.py  bounds.py  cluster_constraints.py  cost_matrix.py  dataset_factory.py  experiment_log.py  greedy.py  instance_features.py  models.py  multistart.py  n_estimator.py  pipeline.py  profiling.py  route_audit.py  route_metrics.py  route_resequencer.py  serializers.py  solver.py  strategies.py  sweep_judgement.py  sweep_sequences.py  tasks.py  urls.py  views.py  warm_start.py
backend/apps/routes/: admin.py  models.py  osrm.py  progress.py  serializers.py  urls.py  views.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  env.py
backend/tests/: factories.py
bbox/: saved_bbox1.json  saved_bbox2.json  saved_bbox3.json  saved_bbox4.json  saved_bbox5.json  saved_bbox6.json  saved_bbox7.json  saved_bbox8.json
bbox_selector/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
bbox_selector/templates/: index.html
bbox_selector/tests/: test_app.py
db_schemas/: README.md  arbocensus_api_schemas.csv  arbocensus_gamification_schemas.csv  arbocensus_schemas.csv
docs/: PROBLEM_STATEMENT.md  SHARED_DB_WORKTREES.md  TODO.md  VIEWER_QUICKSTART.md  demo-warmup-protocol.md  pseudo-codigo.md
docs/experiments/: 20260627-221200-baseline-sweep.md  20260711-231139-baseline-sweep.csv  20260712-real-case-metrics.csv  20260713-greedy-baseline.csv  20260713-real-case-metrics-spatial.csv  20260718-160742-coldpath-profiling-sweep.md  20260718160742-coldpath-profiling-sweep.csv  README.md  arc-weight-crossings-20260724-rejudge.csv  arc-weight-crossings-20260724.csv  arc-weight-crossings-20260724.md  arc-weight-crossings-20260724.sequences.jsonl  baseline-sweep-20260711.md  cluster-constrained-search-20260722-actual.csv  cluster-constrained-search-20260722-cluster-r0.csv  cluster-constrained-search-20260722-cluster-r1-no-floor.csv  cluster-constrained-search-20260722-cluster-r1.csv  cluster-constrained-search-20260722-cluster-r2.csv  cluster-constrained-search-20260722-warm-cluster.csv  cluster-constrained-search-20260722-warm-greedy.csv  cluster-constrained-search-20260722.md  combined-floor-decomposition-20260720.csv  combined-floor-diagnostic-20260720.csv  combined-floor-sweep-20260720.csv  combined-floor-sweep-20260720.md  crossing-metric-validation-20260723-actual.csv  crossing-metric-validation-20260723-actual.sequences.jsonl  crossing-metric-validation-20260723-actual_reseq.csv  crossing-metric-validation-20260723-actual_reseq.sequences.jsonl  crossing-metric-validation-20260723-no-floor.csv  crossing-metric-validation-20260723-no-floor.sequences.jsonl  crossing-metric-validation-20260723-no-floor_reseq.csv  crossing-metric-validation-20260723-no-floor_reseq.sequences.jsonl  crossing-metric-validation-20260723-upper-tmax-tmin9000.csv  crossing-metric-validation-20260723-upper-tmax-tmin9000.sequences.jsonl  crossing-metric-validation-20260723-upper-tmax-tmin9000_reseq.csv  crossing-metric-validation-20260723-upper-tmax-tmin9000_reseq.sequences.jsonl  crossing-metric-validation-20260723.md  floor-price-upper-target-20260723.csv  floor-price-upper-target-20260723.md  (+101 more)
docs/experiments/instances/: README.md  area-26-n157.csv  area-27-n72.csv  (+19 more)
docs/thesis/: Makefile  bibliography.bib  main.tex
examples/: example_bbox.json
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
scripts/: download-osm-data.sh  find-free-ports.sh  requirements-figures.in  requirements-figures.txt  route_figures.py  setup.sh
scripts/tests/: test_route_figures.py
src/arbocensus_pipeline/: __init__.py  cli.py  cluster.py  export.py  filter.py  graph.py  input.py  io.py  optimize.py  routing.py  tsp.py  utils.py
stages/01_bbox_input/: 01_input.json  load_input.py
stages/02_filter/: filter.py
stages/03_graph/: build_graph.py
stages/04_cluster/: 04_clusters.json  assign_by_capacity.py  cluster.py  cluster_0.json  cluster_1.json  cluster_2.json  cluster_3.json  cluster_4.json  cluster_5.json  cluster_6.json  cluster_7.json  clusters_by_censantes.json
stages/05_tsp/: routes_by_cluster.json  tsp_nn_2opt.py
stages/06_output/: clusters.geojson  export_geojson.py  filtered_points.geojson  index.html  input_points.geojson  routes.geojson  update_clusters_with_routes.py
tools/: requirements-dev.txt
tools/scripts/: format.sh  lint.sh  test.sh  type-check.sh
viewer/: index.html  index_v3.html
(+224 files in other folders)
