[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbocensus"
version = "0.1.0"
description = "Optimización de rutas de censo de árboles urbanos mediante algoritmos de clustering y traveling salesman problem"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Alberto Zuñiga"}]
requires-python = ">=3.12.11"
keywords = ["optimization", "routing", "clustering", "tsp", "urban-trees"]

# Modern Python linting and formatting with ruff
# Replaces black, isort, pylint, flake8 with a single, fast tool
[tool.ruff]
line-length = 88
target-version = "py312"
extend-include = ["*.pyi"]

[tool.ruff.lint]
# Enable pycodestyle (E/W), pyflakes (F), isort (I), and common best practices
select = ["E", "W", "F", "I", "N", "UP", "B", "A"]
ignore = [
    "E501",  # Line too long (ruff format handles this)
    "D100",  # Missing module docstring
    "D101",  # Missing class docstring
    "D102",  # Missing method docstring
    "D103",  # Missing function docstring
]

[tool.ruff.format]
# Use same style as black for maximum compatibility
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pyright]
typeCheckingMode = "standard"
include = ["backend", "tests"]
exclude = ["**/node_modules", "**/.venv", "**/__pycache__", "**/.*"]
reportArgumentType = "none"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportIndexIssue = "warning"
reportAttributeAccessIssue = "warning"
reportMissingTypeStubs = false
reportOptionalCallOperand = false

# factory-boy ships without py.typed: its re-exports look like private imports
# and the inner Meta classes look like incompatible overrides to pyright.
[[tool.pyright.executionEnvironments]]
root = "backend/tests"
extraPaths = ["backend"]
reportPrivateImportUsage = "none"
reportIncompatibleVariableOverride = "none"

# Testing configuration
[tool.pytest.ini_options]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage reporting
[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
