[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbox_selector"
version = "0.1.0"
description = "Herramienta local para seleccionar bounding box y mostrar árboles usando Google Maps."
authors = [ { name = "Alberto Zuñiga" } ]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["gis", "google-maps", "flask", "bbox", "arbocensus"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Internet :: WWW/HTTP",
]

dependencies = [
	"Flask==3.1.2",
	"requests>=2.0",
	"python-dotenv>=1.0",
	"psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"black",
	"flake8",
]
docker = [
	"gunicorn",
]

[tool.setuptools]
packages = { find = {} }

[project.urls]
Home = "https://github.com/AlbertoZuiga/arbocensus"
Repository = "https://github.com/AlbertoZuiga/arbocensus"
Issues = "https://github.com/AlbertoZuiga/arbocensus/issues"
